--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,88 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* utils */
+
+.big-container {
+    width: 1600px;
+    margin: 0 auto;
+}
+
+/* generics */
+body {
+    font-family: "Open Sans", sans-serif;
+}
+
+.row {
+    display: flex;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+
+}
+
+h1 {
+    font-size: 100px;
+    font-weight: 900;
+    padding: 20px 0;
+}
+
+/* header */
+header {
+    position: relative;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 0 5px white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+}
+
+.navbar-left {
+    flex-basis: 30%;
+    border: 2px dashed blue;
+}
+
+.dropbox-logo {
+    align-items: center;
+    height: 60px;
+    width: 150px;
+}
+
+.logo {
+    flex-basis: 100%;
+}
+
+.navbar-right {
+    flex-basis: 30%;
+    border: 2px dashed blue;
+}
+
+/* jumbotron */
+.jumbotron {
+    min-height: 1000px;
+    background-color: #B4D0E7;
+    padding-top: 150px;
+    padding-bottom: 20px;
+}
+
+.jumbo-box {
+    min-height: 700px;
+    
+    border: 2px dashed white;
+}
+
+
