--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,18 @@
     margin: 0 auto;
 }
 
+.blue-btn {
+    color: white;
+    background-color: #0061FF;
+    padding: 8px 20px;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.white-btn {
+
+}
+
 /* generics */
 body {
     font-family: "Open Sans", sans-serif;
@@ -20,12 +32,16 @@ body {
     display: flex;
 }
 
-a {
-    text-decoration: none;
+ul {
+    list-style-type: none;
 }
 
-ul {
-
+a.header-info,
+a.header-support,
+a.header-login {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
 }
 
 h1 {
@@ -40,7 +56,6 @@ header {
 }
 
 .navbar {
-    display: flex;
     justify-content: space-between;
     height: 100px;
     padding: 20px;
@@ -68,8 +83,16 @@ header {
     flex-basis: 100%;
 }
 
+.navbar ul {
+    display: flex;
+    gap: 40px;
+    line-height: 60px;
+    margin-left: 40px
+}
+
 .navbar-right {
     flex-basis: 30%;
+    justify-content: flex-end;
     border: 2px dashed blue;
 }
 
@@ -83,8 +106,19 @@ header {
 
 .jumbo-box {
     min-height: 700px;
-    
     border: 2px dashed white;
+}
+
+.jumbo.left {
+    flex-basis: 30%;
+    height: 300px;
+    border: 2px dashed black;
+}
+
+.jumbo.right {
+    flex-basis: 70%;
+    height: 300px;
+    border: 2px dashed black;
 }
 
 
