--- a/css/style.css
+++ b/css/style.css
@@ -11,29 +11,6 @@
     margin: 0 auto;
 }
 
-/* DA CORREGGERE */
-.navbar a.header-info:hover,
-.navbar a.header-support:hover,
-.navbar a.header-login:hover {
-    border-bottom: 2px solid grey;
-}
-
-.blue-btn {
-    color: white;
-    background-color: #0061FF;
-    padding: 8px 20px;
-    font-size: 20px;
-    text-decoration: none;
-}
-
-.blue-btn:hover {
-    background-color: #5b9aff;
-}
-
-.white-btn {
-
-}
-
 /* generics */
 body {
     font-family: "Open Sans", sans-serif;
@@ -53,13 +30,40 @@ a.header-login {
     text-decoration: none;
     color: black;
     font-size: 20px;
-    padding-bottom: 36px;
+    padding-bottom: 37px;
+}
+
+.navbar a.header-info:hover,
+.navbar a.header-support:hover,
+.navbar a.header-login:hover {
+    border-bottom: 2px solid grey;
+}
+
+.blue-btn {
+    color: white;
+    background-color: #0061FF;
+    padding: 8px 20px;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.blue-btn:hover {
+    background-color: #5b9aff;
+}
+
+p {
+    font-size: 20px;
+}
+
+.white-btn {
+    
 }
 
 h1 {
     font-size: 100px;
     font-weight: 900;
-    padding: 20px 0;
+    padding-top: 20px;
+    padding-bottom: 50px;
 }
 
 /* header */
@@ -90,7 +94,7 @@ header {
     width: 150px;
 }
 
-.logo {
+#logo {
     flex-basis: 100%;
 }
 
@@ -108,27 +112,56 @@ header {
 
 /* jumbotron */
 .jumbotron {
-    min-height: 1000px;
+    min-height: 600px;
     background-color: #B4D0E7;
     padding-top: 150px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 
 .jumbo-box {
-    min-height: 700px;
-    border: 2px dashed white;
+    position: relative;
+    min-height: 800px;
 }
 
-.jumbo.left {
-    flex-basis: 30%;
-    height: 300px;
-    border: 2px dashed black;
+/* jumbo left */
+.jumbo-left {
+    width: 30%;
+    min-height: 300px;
 }
 
-.jumbo.right {
-    flex-basis: 70%;
-    height: 300px;
-    border: 2px dashed black;
+.jumbo-description {
+    flex-basis: 100%;
 }
 
+.p-jumbo {
+    padding-bottom: 50px;
+}
 
+.free-trial {
+    padding-bottom: 50px;
+}
+
+.cancel-subscription {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+}
+
+.arrow-down {
+    color: black;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+/* jumbo right */
+.jumbo-right {
+    width: 70%;
+    position: relative;
+}
+
+.jumbo-img {
+    max-width: 100%;
+    display: block;
+    position: absolute;
+}
