--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,36 @@
     box-sizing: border-box;
 }
 
-/* utils */
+/* UTILS */
 
 .big-container {
     width: 1600px;
     margin: 0 auto;
 }
 
-/* generics */
+.small-container {
+    width: 1400px;
+    margin: 0 auto;
+}
+
+
+p {
+    font-size: 20px;
+}
+
+h1 {
+    font-size: 100px;
+    font-weight: 900;
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+
+h2 {
+    font-size: 55px;
+    padding-bottom: 50px;
+}
+
+/* GENERICS */
 body {
     font-family: "Open Sans", sans-serif;
 }
@@ -51,22 +73,15 @@ a.header-login {
     background-color: #5b9aff;
 }
 
-p {
-    font-size: 20px;
-}
-
 .white-btn {
-    
+    color: black;
+    background-color: white;
+    padding: 8px 20px;
+    font-size: 20px;
+    text-decoration: none;
 }
 
-h1 {
-    font-size: 100px;
-    font-weight: 900;
-    padding-top: 20px;
-    padding-bottom: 50px;
-}
-
-/* header */
+/* HEADER */
 header {
     position: relative;
 }
@@ -112,7 +127,7 @@ header {
     justify-content: flex-end;
 }
 
-/* jumbotron */
+/* JUMBOTRON */
 .jumbotron {
     min-height: 600px;
     background-color: #B4D0E7;
@@ -125,7 +140,7 @@ header {
     min-height: 800px;
 }
 
-/* jumbo left */
+/* JUMBO LEFT */
 .jumbo-left {
     width: 30%;
     min-height: 300px;
@@ -156,7 +171,7 @@ header {
     left: 0;
 }
 
-/* jumbo right */
+/* JUMBO RIGHT */
 .jumbo-right {
     width: 70%;
     position: relative;
@@ -166,4 +181,53 @@ header {
     max-width: 100%;
     display: block;
     position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* MAIN */
+/* PURCHASE SECTION */
+.buisness {
+    padding-top: 300px;
+}
+
+.billing-type {
+    gap: 50px;
+}
+
+.checked-btn {
+    height: 25px;
+    width: 25px;
+    border: 6px solid #0061FF;
+    border-radius: 50%;
+}
+
+.unchecked-btn {
+    height: 25px;
+    width: 25px;
+    border: 3px solid lightgray;
+    border-radius: 50%;
+}
+
+.monthly,
+.annual {
+    line-height: 25px;
+    margin-left: 5px;
+    font-size: 18px;
+}
+
+.buisness-cards {
+    padding-top: 70px;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.card {
+    flex-basis: calc(100% / 3 - 40px / 3);
+    min-height: 300px;
+    border: 1px solid lightgrey;
+}
+
+.card.long-card {
+    flex-grow: 1;
 }
