--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 
 
-p {
+.jumbo-description > p {
     font-size: 20px;
 }
 
@@ -93,7 +93,8 @@ a.header-login {
     text-decoration: none;
 }
 
-.blue-btn:hover {
+.blue-btn:hover,
+.big-blue-btn:hover {
     background-color: #5b9aff;
 }
 
@@ -245,7 +246,7 @@ a.header-login {
 
 .card {
     flex-basis: calc(100% / 3 - 120px / 3);
-    min-height: 500px;
+    min-height: 200px;
     border: 1px solid lightgrey;
 }
 
@@ -261,6 +262,7 @@ a.header-login {
     text-align: center;
 }
 
+/* card center */
 .card-center {
     padding: 40px 40px;
 }
@@ -277,7 +279,8 @@ a.header-login {
     padding-top: 25px;
 }
 
-.service span {
+.service span,
+span.highlights-span {
     padding-left: 10px;
 }
 
@@ -295,7 +298,35 @@ a.header-login {
 
 .or {
     border-bottom: 1px solid lightgrey;
-    padding-bottom: 40px;
+    padding-bottom: 50px;
 }
+ /* highlights */
+ .highlights {
+    padding-top: 90px;
+ }
 
 
+ .check {
+    position: relative;
+    left: 0;
+    top: 3px;
+ }
+ 
+ .div-highlights {
+     padding: 15px 0;
+}
+ 
+.highlights-strong:first-child {
+    padding-top: 50px;
+ }
+
+ .contact {
+    padding: 12px 100px;
+ }
+
+ /* long card */
+ .padding-long-card {
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+ }
