--- a/css/style.css
+++ b/css/style.css
@@ -397,11 +397,12 @@ span.highlights-span {
 
 .operations-cards {
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 60px;
+    margin-top: 30px;
 }
 
 .op-card {
-    flex-basis: calc(100% / 3 - 100px / 3);
-    border: 2px dashed black;
-    min-height: 100px;
+    flex-basis: calc(100% / 3 - 120px / 3);
+    min-height: 300px;
 }
+
