--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ p.fs18 {
     font-size: 18px;
 }
 
+p.fs20 {
+    font-size: 20px;
+}
+
 h1 {
     font-size: 100px;
     font-weight: 900;
@@ -63,6 +67,17 @@ span {
 
 .mb200px {
     margin-bottom: 200px;
+}
+
+a.no-td {
+    text-decoration: none;
+    color: black;
+}
+
+.ss-padding {
+    height: 100%;
+    width: 100%;
+    padding: 20px;
 }
 
 /* GENERICS */
@@ -410,19 +425,90 @@ a.find-out-more {
 }
 
 /* OUR COSTUMERS */
+.square-col {
+    height: 100%;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
 .custumers-container {
-    height: 800px;
-    background-color: lightgreen;
+    height: 100%;
     width: 100%;
 }
 
-.customers-area {
-    flex-basis: calc(100% / 3);
-    height: 800px;
-    border: 2px dashed black;
+.custumers-area{
+   width: 100%;
+   height: 100%;
 }
 
+.squares {
+    flex-basis: calc(100% / 2);
+    height: 400px;
+}
 
+/* left squares */
+.ss-bg {
+    height: 100%;
+    width: 100%;
+}
+
+.design-green {
+    background-color: #A2D39B;
+    border-top: 20px solid #A2D39B;
+    border-bottom: 20px solid #A2D39B;
+    border-left: 20px solid #A2D39B;
+    border-right: 20px solid #A2D39B;
+}
+
+.centered-img {
+    height: 200px;
+    width: 200px;
+    margin: 80px auto ;
+}
+
+.ss-bg:hover {
+    border-top: 20px solid #D1E9CD;
+    border-bottom: 20px solid #D1E9CD;
+    border-left: 20px solid #D1E9CD;
+    border-right: 20px solid #D1E9CD;
+}
+
+.invert-filter {
+    filter: invert(100%);
+}
+
+/* center square */
+.big-square {
+    flex-basis: calc(100% / 3);
+}
+
+.bgc-square-center {
+    height: 100%;
+    width: 100%;
+    background-color: #F5F5F5;
+}
+
+.bs-padding {
+    padding: 60px;
+}
+
+.custumers-center {
+    padding: 60px;
+}
+
+.designit-img {
+    margin-bottom: 60px;
+}
+
+.img-border {
+    width: 150px;
+    border-bottom: 2px solid lightgrey;
+    margin-bottom: 60px;
+}
+
+.morten {
+    margin-top: 60px;
+}
 
 
 /* your comapny */
