--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,10 @@ a.header-login {
     display: inline-block;
 }
 
+.white-text {
+    color: white;
+}
+
 /* HEADER */
 .navbar {
     justify-content: space-between;
@@ -637,4 +641,48 @@ a.find-out-more {
 
 p.p-hover {
     display: none;
+}
+
+/* FOOTER */
+footer {
+    background-color: black;
+    border-bottom: 1px solid white;
+}
+
+.footer-padding {
+    padding: 130px 0;
+    gap: 50px;
+}
+
+.info-col {
+    flex-basis: calc(100% / 5 - 200px / 5)
+}
+
+.foot-a {
+    color: white;
+    text-decoration: none;
+    line-height: 50px;
+    font-size: 20px;
+}
+
+.footer-border {
+    border: 1px solid lightgrey;
+    width: 150px;
+}
+
+.select-leng {
+    padding: 60px 0;
+    min-height: 100px;
+}
+
+select {
+   color: #ababab;
+   background-color: black;
+   font-size: 18px;
+   border: none;
+}
+
+.span-border-footer {
+    border: 2px solid lightgrey;
+    width: 100%;
 }
